fixed some font colors changing on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -366,6 +366,7 @@ button {
 .contactFormSection .phone {
   display: flex;
   z-index: 2;
+  color: white;
 }
 
 .contactFormSection img {
@@ -417,6 +418,7 @@ select {
   overflow: hidden;
   /* Hide scrollbar and disable scrolling */
   font-family: inherit;
+  color: grey;
 }
 
 .contactFormSection .message {
